# gravitalia

./: .deepsource.toml  .env  .env.example  Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  helpers_test.go  main.go
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-image.yml  docker-publish.yaml  elixir.yml  go.yml  rust.yml
database/: memcached.go  memgraph.go
helpers/: jwt.go  snowflake.go
helpers/lib/: snowflake.c
model/: Error.go  OAuth.go  Stats.go
notification/: Dockerfile  README.md  mix.exs
notification/config/: config.exs
notification/lib/: helpers.ex  nats.ex  notification.ex  router.ex  sse.ex
notification/test/: notification_test.exs
recommendation/: Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
recommendation/database/: memgraph.go
recommendation/helpers/: jwt.go  prometheus.go  recommendation.go  zipkin.go
recommendation/model/: Post.go
recommendation/router/: index.go  recommendation.go
recommendation/src/: database.rs  helpers.rs  main.rs  model.rs
recommendation/src/router/: foyou.rs  mod.rs  most_liked.rs
rest/: Dockerfile  README.md  go.mod  go.sum  helpers_test.go  main.go
rest/database/: memcached.go  memgraph.go
rest/grpc/: spinoza.go  torresix.go
rest/helpers/: jwt.go  nats.go  prometheus.go  zipkin.go
rest/model/: Comment.go  (+7 more)
router/: get.go  index.go  like.go  new.go  oauth.go  relation.go  subs.go  users.go
search/: .env.example  Cargo.toml  Dockerfile
search/src/: database.rs  main.rs  model.rs
search/src/router/: add.rs  all.rs  del.rs  mod.rs  research.rs
(+15 files in other folders)
