[package]
name = "recommendation"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
warp = { version = "0.3.5", features = ["tls"] }
serde = { version = "1.0.171", features = ["derive"] }

neo4rs = "0.6.2"

serde_json = "1.0.102"
dotenv = "0.15.0"
anyhow = "1.0.71"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"