[package]
name = "search"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
warp = "0.3.5"

meilisearch-sdk = "0.24.1"

dotenv = "0.15.0"
anyhow = "1.0.71"